--- a/ex-3/ex-3.html
+++ b/ex-3/ex-3.html
@@ -6,9 +6,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lezione CSS</title>
+    <link rel="stylesheet" href="ex-3.css">
 </head>
 
 <body>
+
+    <aside>
+        <ul>
+            <div class="placeholder">
+                <img src="#" alt="logo">
+            </div>    
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+        </ul>
+        <div>
+            <figure>
+                <img src="avatar-svgrepo-com.svg" alt="avatar">
+                <figcaption>Nome Avatar</figcaption>
+            </figure>
+        </div>
+    </aside>
     
 </body>
 
