--- a/ex-5/ex-5.html
+++ b/ex-5/ex-5.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blocks</title>
   <link rel="stylesheet" href="ex-5.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-5.css">
 </head>
 
 <body>
